Version 0.19
============
svn://common-lisp.net/project/armedbear/svn/trunk/abcl
(Unreleased)

Features
--------

* [svn 12505] All calls to anonymous functions and local functions that have
  been declared inline are now converted to LET* forms, reducing stack usage
  and the number of generated classes.

* [svn 12487] An initial port ASDF-INSTALL now forms the first ABCL
  contrib.  Such contribs are optionally built by the Ant target
  'abcl.contrib'.  ASDF-INSTALL is not expected to work very well
  under Windows in its present state.

* [svn 12447] [ticket:80] REQUIRE now searches for ASDF systems.

* [svn r12422] Jar pathname support extensively re-worked and tested
  so that LOAD, PROBE-FILE, TRUENAME, DIRECTORY, and WRITE-FILE-DATE
  all work both for local and remote jar pathnames of the form
  "jar:URL!/JAR-ENTRY".

  The loading ASDF systems from jar files is now possible.

  SYS:PATHNAME-JAR-P predicate signals whether a pathname references a
  jar.
       
  NB: jar pathnames do *not* currently work as an argument to OPEN.

  SYS:UNZIP implemented to unpack ZIP files.  

  SYS:ZIP now has a three argument version for creating zip files with
  hierarchical entries.

* [svn r12450] Collect unprocessed command-line arguments in
  EXT:*COMMAND-LINE-ARGUMENT-LIST* (Dennis Lambe Jr.)

* [svn r12414] SYS::%GET-OUTPUT-STREAM-ARRAY returns a Lisp byte array
  from a Java byte array stream.

* [svn 12402] ABCL.TEST.LISP:RUN-MATCHING will now execute that subset
  of tests which match a string.


Fixes/Optimizations
-------------------

* [svn r12510] The new ansi-test WITH-STANDARD-IO-SYNTAX.23 passes.
  Our with-standard-io-syntax implementation now correctly resets all necessary
  pprint variables. Patch by Douglas R. Miles, thanks for the contribution!

* [svn r12485] Pathnames starting with "." can now have TYPE.

* [svn r12484] FASLs containing "." characters not used to indicate
  type (i.e. ".foo.bar.baz.abcl") can now be loaded.
