@@ -6,6 +6,10 @@ svn://common-lisp.net/project/armedbear/svn/trunk/abcl
 Features
 --------
 
+* [svn 12513] Implement SYS:SRC and SYS:JAVA logical pathname
+  translations for system Lisp source and the root of the Java package
+  structure, respectively.
+
 * [svn 12505] All calls to anonymous functions and local functions that have
   been declared inline are now converted to LET* forms, reducing stack usage
   and the number of generated classes.
